[nginx+containers] Add services.yml vars file to centralize subdomains and ports for web services

--- a/main.yml
+++ b/main.yml
@@ -15,6 +15,7 @@
     - vars/main.yml
     - vars/storage.yml
     - vars/secrets.yml
+    - vars/services.yml
     - vars/firewall.yml
     - vars/samba.yml
 
