--- a/tasks/docker-containers/containers/navidrome/docker-compose.yml
+++ b/tasks/docker-containers/containers/navidrome/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     restart: unless-stopped
     user: 1000:1000
     ports:
-      - 127.0.0.1:4533:4533
+      - 127.0.0.1:{{ services.navidrome.port }}:4533
     environment:
       ND_PORT: 4533
-      ND_BASEURL: https://music.{{ main_domain }}
+      ND_BASEURL: https://{{ services.navidrome.subdomain }}.{{ main_domain }}
       ND_LASTFM_APIKEY: ${ND_LASTFM_APIKEY}
       ND_LASTFM_SECRET: ${ND_LASTFM_SECRET}
       ND_SPOTIFY_ID: ${ND_SPOTIFY_ID}
