--- a/tasks/docker-containers/containers/vaultwarden/docker-compose.yml
+++ b/tasks/docker-containers/containers/vaultwarden/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     container_name: vaultwarden
     restart: always
     ports:
-      - 127.0.0.1:{{ vaultwarden_port }}:80
+      - 127.0.0.1:{{ services.vaultwarden.port }}:80
     volumes:
       - /nas/appdata/vaultwarden:/data
     environment:
-      DOMAIN: "https://{{ vaultwarden_domain }}"
+      DOMAIN: https://{{ services.vaultwarden.subdomain }}.{{ main_domain }}
       SIGNUPS_ALLOWED: false
       INVITATIONS_ALLOWED: false
       ADMIN_TOKEN: ${VAULTWARDEN_ADMIN_TOKEN}
