[common] Add btop to installed packages

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -24,6 +24,7 @@
       apt:
         name:
           - bat
+          - btop
           - command-not-found
           - cryptsetup
           - curl
