--- a/vars/secrets.yml
+++ b/vars/secrets.yml
@@ -8,9 +8,10 @@ ssh_keys: []
 # SSH keys for sudo
 sudo_ssh_keys: []
 
-# Duck DNS
-duckdns_domain:
-duckdns_token:
+# DynDNS
+dyndns_domain:
+dyndns_login:
+dyndns_pass:
 
 # Certbot
 certbot_email:
