[packages] Add stow and lvm2 to installed packages

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -35,9 +35,11 @@
           - lsd
           - lshw
           - lsof
+          - lvm2
           - ncdu
           - pv
           - python3
+          - stow
           - tcpdump
           - tmux
           - tree
