[certbot] Update certbot config to work with new domain

--- a/tasks/nginx/conf.d/letsencrypt.conf
+++ b/tasks/nginx/conf.d/letsencrypt.conf
@@ -1,7 +1,7 @@
 # include /etc/letsencrypt/options-ssl-nginx.conf
 
-ssl_certificate /etc/letsencrypt/live/*.{{ main_domain }}/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/*.{{ main_domain }}/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/{{ main_domain }}/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/{{ main_domain }}/privkey.pem;
 ssl_session_timeout 1d;
 ssl_session_cache shared:SSL:10m;  # about 40000 sessions
 ssl_session_tickets off;
