[packages] Add fish shell to installed packages

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -29,6 +29,7 @@
           - cryptsetup
           - curl
           - fd-find
+          - fish
           - git
           - htop
           - jq
